# unity_package_reader

./: .gitignore  Cargo.toml  README.md  build.rs
src/: from_yaml_trait.rs  lib.rs  unity_package.rs
src/file_types/: asset_file.rs  debug_output.txt  gameobject.rs  light.rs  lightmapsettings.rs  material.rs  meshfilter.rs  meshrenderer.rs  mod.rs  modelimporter.rs  nativeformatimporter.rs  navmeshsettings.rs  occlusioncullingsettings.rs  prefab.rs  rendersettings.rs  textureimporter.rs  transform.rs
src/file_types/sections/: build_target.rs  color.rs  empty.rs  falloff_table.rs  file_reference.rs  mod.rs  named_value.rs  prefab_modification.rs  texture.rs  vector2.rs  vector3.rs  vector4.rs
src/file_types/templates/: GameObject.yaml  Light.yaml  LightmapSettings.yaml  Material.yaml  MeshFilter.yaml  MeshRenderer.yaml  NavMeshSettings.yaml  Prefab.yaml  RenderSettings.yaml  Transform.yaml
