[package]
name = "unity-package-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
unity-yaml-rust = { git = "https://github.com/DirkChristianBecker/unity-yaml-rust.git" }
flate2 = "1.0"
tar = "0.4"
uuid = "1.7.0"
regex = "1.10.3"
lazy_static = "1.4.0"
rust-tools = { git = "https://github.com/DirkChristianBecker/rust-tools" }

[build-dependencies]
unity-yaml-rust = { git = "https://github.com/DirkChristianBecker/unity-yaml-rust.git" }
rust-tools = { git = "https://github.com/DirkChristianBecker/rust-tools" }